[package]
name = "shred-replay"
version = "0.1.0"
authors = ["cairoliang"]
edition = "2021"
description = "Read shared records sequentially from the PostgreSQL database, assembling a ledger to replay slots with solana-ledger-tool"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = ""

[dependencies]
bs58 = "0.4.0"
bytemuck = "1.7.2"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
log = "0.4.14"
openssl = { version = "0.10" }
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.4", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
thiserror = "1.0.30"
clap = "2.33.1"

solana-entry = { path = "../entry", version = "=1.14.6" }
solana-ledger = { path = "../ledger", version = "=1.14.6" }
solana-sdk = { path = "../sdk", version = "=1.14.6" }

[dev-dependencies]
assert_cmd = "2.0"
