[package]
name = "smt-proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
hex = "0.4.3"
sparse-merkle-tree = "0.6.1"
clap = "2.33.1"
log = { version = "0.4.17" }
solana-clap-utils = { path = "../clap-utils", version = "=1.14.6" }
solana-sdk = { path = "../sdk", version = "=1.14.6" }
solana-ledger = { path = "../ledger", version = "=1.14.6" }
solana-runtime= {  path = "../runtime", version = "=1.14.6" }
