[package]
name = "smt-proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
hex = "0.4.3"
sparse-merkle-tree = "0.6.1"
clap = "2.33.1"
log = { version = "0.4.17" }
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.4", features = ["derive"] }
postgres-openssl = { version = "0.5.0"}
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
thiserror = "1.0.30"
solana-clap-utils = { path = "../clap-utils", version = "=1.14.6" }
solana-sdk = { path = "../sdk", version = "=1.14.6" }
solana-ledger = { path = "../ledger", version = "=1.14.6" }
solana-runtime= {  path = "../runtime", version = "=1.14.6" }
chrono = { version = "0.4.11", features = ["serde"] }
openssl = { version = "0.10" }
crossbeam-channel = "0.5.6"